# netgrep

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_keylog.rs  fuzz_parse_dns.rs  fuzz_parse_http.rs  fuzz_parse_http2.rs  fuzz_parse_packet.rs
src/: lib.rs  main.rs  sanitize.rs
src/capture/: mod.rs  pcap_writer.rs
src/output/: mod.rs
src/protocol/: dns.rs  http.rs  http2.rs  mod.rs
src/reassembly/: mod.rs
src/tls/: decrypt.rs  handshake.rs  keylog.rs  mod.rs
src/tui/: event.rs  mod.rs
tests/: integration.rs  stress.rs  unit_stress.rs
