[package]
name = "netgrep"
version = "0.1.0"
edition = "2024"
description = "Grep for the network, for a post-TLS world"
license = "MIT"
repository = "https://github.com/gerg/netgrep"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Packet capture
pcap = "2.3"

# Protocol dissection
etherparse = "0.19"

# Pattern matching
regex = "1"

# Output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async / streams
crossbeam-channel = "0.5"

# Error handling
anyhow = "1"
thiserror = "2"

# Terminal colors
colored = "3"

# TLS parsing
tls-parser = "0.12"

# Crypto (HKDF, AES-GCM, HMAC for TLS key derivation + decryption)
ring = "0.17"
