[package]
name = "netgrep"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Grep for the network, for a post-TLS world"
license = "MIT"
repository = "https://github.com/georgeglarson/netgrep"
homepage = "https://github.com/georgeglarson/netgrep"
keywords = ["network", "pcap", "packet", "grep", "tls"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Packet capture
pcap = "2.3"

# Protocol dissection
etherparse = "0.19"

# Pattern matching
regex = "1"

# Output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async / streams
crossbeam-channel = "0.5"

# Error handling
anyhow = "1"

# Terminal colors
colored = "3"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# TLS parsing
tls-parser = "0.12"

# DNS parsing
simple-dns = "0.11"

# HTTP/2 HPACK header decompression
fluke-hpack = "0.3"

# Crypto (HKDF, AES-GCM, HMAC for TLS key derivation + decryption)
ring = "0.17"

# Zeroize sensitive key material on drop
zeroize = { version = "1", features = ["derive"] }

# Signal handling
ctrlc = "3"
